packages/ai-chat-components/src/components/toolbar/src/toolbar.scss
/*
 *  Copyright IBM Corp. 2025, 2026
 *
 *  This source code is licensed under the Apache-2.0 license found in the
 *  LICENSE file in the root directory of this source tree.
 *
 *  @license
 */

@use "../../../globals/scss/vars" as *;
@use "../../../globals/scss/modifiers" as *;
@use "@carbon/styles/scss/theme";
@use "@carbon/layout";

$block-class: #{$prefix}-toolbar;

/* Toolbar styles */
:host([data-measuring]) {
  visibility: hidden;
}

:host {
  @include rounded-modifiers;

  display: block;
  max-inline-size: 100%;
  min-inline-size: 0;

  .#{$block-class} {
    display: flex;
    block-size: 100%;
    inline-size: 100%;
    max-inline-size: 100%;
    min-block-size: layout.$spacing-08;
    min-inline-size: 0;

    // Suppress custom elements until styles are loaded
    #{$cds-prefix}-button:not(:defined),
    #{$cds-prefix}-overflow-menu:not(:defined) {
      display: none;
    }

    &-overflow-icon {
      // Web components ghost icon only button bug override
      align-self: unset;
      color: theme.$icon-primary;
    }

    [data-floating-menu-container] {
      position: relative;
    }

    [data-hidden]:not([data-fixed]) {
      display: none;
    }
  }

  .#{$block-class}__navigation {
    display: flex;
    align-items: center;
    margin-block: auto;
  }

  .#{$block-class}__title {
    flex: 1;
    margin-block: auto;
    margin-inline-end: auto;
    min-inline-size: layout.$spacing-10;
    padding-inline: layout.$spacing-04;
  }

  // Style for name text - this needs to be at the host level to style slotted content
  .#{$block-class}__name {
    font-weight: bold;
  }

  .#{$block-class}__navigation:has(::slotted(*)) ~ .#{$block-class}__title {
    padding-inline-start: 0;
  }

  .#{$block-class}__fixed-actions {
    margin-block: auto;
  }

  .#{$block-class}__start,
  .#{$block-class}__end {
    display: flex;
    min-inline-size: 0;
  }

  .#{$block-class}__start {
    flex-grow: 1;
  }

  .#{$block-class}__end {
    flex-shrink: 1;
    justify-content: end;
  }

  ::slotted([slot="navigation"]) {
    display: flex;
    align-items: center;
    margin-block: auto;
  }

  ::slotted([slot="decorator"]) {
    display: flex;
    align-items: center;
    justify-content: center;
    margin-block: auto;
    min-block-size: layout.$spacing-08;
    min-inline-size: layout.$spacing-08;
  }
}

